--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/three": "^0.182.0",
+    "@vercel/node": "^5.5.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -54,6 +55,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
