--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "razorpay": "^2.9.6",
-    "mongoose": "^8.9.3"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.9.3",
+    "nodemailer": "^8.0.1",
+    "razorpay": "^2.9.6"
   }
 }
